ajuste de responsividade

--- a/wp-content/themes/rokophoto-lite/style.css
+++ b/wp-content/themes/rokophoto-lite/style.css
@@ -429,6 +429,7 @@ pre {
 	.menu-toggle,
 	.main-navigation.toggled .nav-menu {
 		display: block;
+		background: #F7941E;
 	}
 
 	.main-navigation ul {
@@ -438,6 +439,11 @@ pre {
 
 	.main-navigation ul li {
 		width: 100%;
+		border-bottom:1px solid #000;
+
+	}
+	.navbar-default .nav li a:hover:before{
+		content:none!important;
 	}
 
 	.main-navigation ul ul,
@@ -448,6 +454,10 @@ pre {
 		padding-left: 20px;
 		text-align: left;
 	}
+	
+	.main-navigation ul ul li{
+		border-bottom:0;
+	}
 
 	.main-navigation ul ul a {
 		width: auto !important;
@@ -456,6 +466,29 @@ pre {
 	.main-navigation ul ul li:hover > ul {
 		left: auto;
 	}
+	.featured-line .item-left:before{
+		content:none!important;
+	}
+	.featured-line{
+		position: relative;
+		margin:auto;
+		width:90%;
+	}
+	.featured-line:before{
+		content:'';
+		position: absolute;
+		width: 100%;
+		height:2px;
+		border-bottom:3px dotted #ddd;
+		bottom:0;
+	}
+	.featured-line:last-of-type:before{
+		content:none!important;
+	}
+	.featured-line .item-left p,.featured-line .item-right p,
+	.featured-line .item-left h3,
+	.featured-line .item-right h3{text-align:center!important;}
+
 }
 
 .navbar-default.navbar-shrink ul ul {
@@ -464,11 +497,7 @@ pre {
 .navbar-default.navbar-shrink.main-navigation a svg{
 	height:5rem;
 }
-.navbar-default {
-	border-color: transparent;
-	background-color: #222;
-	text-align: center;
-}
+
 
 .navbar-default .navbar-brand img {
 	max-width: 100%;
@@ -508,7 +537,11 @@ pre {
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-	background-color: #fff;
+	background-color: #777;
+}
+.navbar-default{
+	background-color: transparent;
+	border:0;
 }
 .align-vertical:before{
 	content: '';
@@ -915,6 +948,12 @@ pre {
 .featuredClients{
 	clear: left;
 	padding:5rem 0 7rem 0;
+
+}
+.featuredClients p{
+	margin:3rem auto;
+	font-size: 18px;
+	width: 70%;
 }
 .dark-overlay {
 	height: 630px;
@@ -3733,7 +3772,7 @@ ul.footerLink li{text-align:left;}
 	border-radius:0;
 	width: 100%;
 }
-.faleConosco form input:focus,.faleConosco form textarea:focus{
+.faleConosco form input[type='text']:focus,.faleConosco form textarea:focus{
 	background-color: #f3f3f3;
 	padding: 10px;
 	box-shadow: 0 0 0;
@@ -3773,7 +3812,10 @@ ul.footerLink li{text-align:left;}
 .faleConosco p a:hover{
 	text-decoration: none;
 }
-
+div.wpcf7-response-output{
+	padding: 2em 1em;
+	font-size: 15px;
+}
 /* Classes apoio */
 .right{
 	float:right;
